--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 authors = ["avhidotsol <avhimazumder5@gmail.com>"]
 description = "A fast Rust-based terminal typing test"
 repository = "https://github.com/AvhiMaz/cargo-type"
+license = "MIT"
 keywords = ["typing", "cli", "terminal", "rust"]
 categories = ["command-line-utilities"]
 
