--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "cli-type"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["avhidotsol <avhimazumder5@gmail.com>"]
 description = "A fast Rust-based terminal typing test"
 repository = "https://github.com/AvhiMaz/cargo-type"
 license = "MIT"
+readme = "README.md"
 keywords = ["typing", "cli", "terminal", "rust"]
 categories = ["command-line-utilities"]
 
